--- a/templates/aprendizaje.html
+++ b/templates/aprendizaje.html
@@ -49,7 +49,7 @@
       style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_frank-vessia-9uprlljfkp8-unsplash_1.jpg?v=1589160069846);"
     >
       <h1>
-        Educacion a distancia
+        Educación a distancia
       </h1>
     </div>
     <section class="indexcards">
@@ -58,23 +58,22 @@
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_edu.jpg?v=1589226915200 "
           class="izquierda"
         />
-        Sin importar que nivel educativo estes transitando es importante que
-        fomentemos el parendizaje en todo moemnto en nuestras cassas.La
-        educacion a distancia es todo un desafio para una persona de cualquier
+        Sin importar el nivel educativo estes transitando es importante que
+        fomentemos el aparendizaje en todo moemnto en nuestras casas.La
+        educación a distancia es todo un desafío para una persona en cualquier
         edad.Aqui te brindamos algunos consejos para que la tarea de educarse en
-        casa sea mas facil y eficiente y ademas te poponemos algunos cursos
-        complementraios que se pueden hacer segun intereses personal.
+        casa sea mas fácil.
       </p>
     </section>
     <div class="indexcards">
       <u><h2 class="margentitulos">Consejos utiles</h2></u>
 
       <dl class="margentitulos">
-        <dt><u>Conocimiento de la heramienta:</u></dt>
+        <dt><u>Conocimiento de la herramienta:</u></dt>
         <dd>
-          Es sumamente necesario tener una buen conocmiento de la plataforma
-          virtual que cada institución use.Familiarizarse con la herramienta de
-          comuicacion entre alumnos y porofesores y si tenes dudas o preguntas
+          Es sumamente necesario tener una buen conocimiento de la plataforma
+          virtual que cada institución use.Familiarizáte con la herramienta de
+          comunicacíon entre alumnos y porofesores y si tenes dudas o preguntas
           no tardes en pedir ayuda
         </dd>
         <dt><u>Organización</u></dt>
@@ -86,28 +85,27 @@
         </dd>
         <dt><u>Toma recreos</u></dt>
         <dd>
-          Intercalá intervaos de estudio de no mas de 2 horas con recreos para
-          descansar.Esta probado qeu son necesarios para asentar los
+          Intercalá intervalos de estudio de no mas de 2 horas con recréos para
+          descansar.Esta probado que son necesarios para asentar los
           conocimientos.
         </dd>
         <dt><u>Tecnología</u></dt>
         <dd>
-          Nos guste o no la tecnologia es nuestro mejor aliado en esta
-          circustancia,aprendamos a usarla , familiarizate con los programas de
-          edcion de texto y otras presentaciones.Si te cuesta leer en
+          Nos guste o no la tecnología es nuestro mejor aliado en esta
+          circustancia,aprendamos a usarla,  familiarizáte con los programas de
+          edicíonc de texto y otras presentaciones.Si te cuesta leer en
           computadora opta por imprimir los textos muy extensos para poder
-          realizar las tareas que te pidan. Frente a una situacion de exámen o
+          realizar las tareas que te pidan. Frente a una situacíon de exámen o
           clases virtuales asegurate de tener buena conectividad a una red Wifi
-          y que tu computadora se encuentre en buen estado,en parte de un
-          adecuado uso de la tecnologia dependera el deseempeño académico
+          y que tu computadora se encuentre en buen estado, parte de nuestro deseempeño acádemico dependerá de un adecuado uso de la tecnología.
         </dd>
         <dt><u>Renovación</u></dt>
         <dd>
           Aprovecha para aprender cosas nuevas aparte de lo estrictamente
-          academico.Los idiomas son muy interesantes y hya gran variedad de
-          modalidades a distancia, o podes optar por alguna espciazializacion
+          académico.Los idiomas son muy interesantes y hya gran variedad de
+          modalidades a distancia, o podes optar por alguna especialización
           que te interese.Todo es bienvenido a la hora de hacer crecer nuestros
-          conocimientos
+          conocimientos, esta probado que mientras mas fomentemos la conexión entre neuronas mejor. 
         </dd>
       </dl>
     </div>
