--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -51,7 +51,7 @@
     </header>
     <section>
       <p class="textoconta">
-        Trinidad Gonzalez Padin: 2944581418<br/>
+        Trinidad González Padin: 2944581418<br/>
 
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_2pic.jpg?v=1589739816737"
