--- a/templates/informacionc.html
+++ b/templates/informacionc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Informacion cientifica</title>
+    <title>Información científica</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -47,14 +47,14 @@
       style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_1cdc-w9keokhajkw-unsplash.jpg?v=1588691997173);"
     >
       <h1>
-        La Ciencia VS Covid-19
+        La Ciencia VS Corona-Virus
       </h1>
     </div>
     <section>
       <div class="indexcards">
         <p class="introsalud">
-          <h2><u> Pandemia de informacion:</u></h2>
-          Nos encontramos frente a un mar inmenso de infrormacion acerca del Corona Virus  y de los avances y descurbimientos de la ciencia sobre este tema.Para los curiosos que desean investigar todo acerca de este virus le recomendamos primero que se familiarize con algunos terminos que encontratra en todo texto relacionado a a este virus tan particular.
+          <h2><u> Pandemia de información:</u></h2>
+          Nos encontramos frente a un mar inmenso de información acerca del Corona Virus, de los avances y descubrimientos de la ciencia sobre este tema.Para los curiosos que desean investigar todo acerca de este virus le recomendamos primero que se familiarice con algunos términos que encontrará en todo texto relacionado a a este virus tan particular.
         </p>
 
 
@@ -112,11 +112,11 @@
     <div>
     <div class="indexcards">
       <p class="introsalud">
-        <u> Investigacion Critica:</u>
-        Frente a la situacion de contingencia como usarios de redes sociales y
-        medios de comunicacion nos vemos invadidos de informacion.Si te gustaria
+        <u> Investigación Crítica:</u>
+        Frente a la situación de contingencia como usarios de redes sociales y
+        medios de comunicacion disponemos de gran cantidad de informacion.Si te gustaría
         infromarte acerca de avances sobre la batalla de la ciencia contra el
-        Corona-Virus, aqui te dejamos algunos sitios para que puedas visitar.Siempore recorda informarte de manera critica y analitica.
+        Corona-Virus, aqui te dejamos algunos sitios para que puedas visitar.Siempore recorda que si queres ser un buen científico debes saber recolectar información de calidad.
 
       </p>
       <ul class="list-unstyled">
@@ -201,7 +201,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas informacion no dude en contactarse
+          Para mas información no dude en contactarse
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
