--- a/templates/manualp.html
+++ b/templates/manualp.html
@@ -48,15 +48,15 @@
       style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_jessica-lewis-vi6szzwgc34-unsplash.jpg?v=1589333623353);"
     >
       <h1>
-        Protocolos de la Pandemia
+        Infromación Útil
       </h1>
     </div>
     <p class="introsalud">
       <u> Para tomar nota</u>
-      Aqui encontraras de forma sencilla la información importante que deberías
+      Aqui podes encontrar de forma sencilla la información importante que deberías
       saber acerca de protoloclos, medidas de seguridad e higiene, restricciones
-      y permisos entre otros anuncions liberados desde el gobierno de la Ciudad
-      de Mendoza para el aisalemiento social preventivo y obligatorio.
+      y permisos entre otros anuncios liberados desde el gobierno de la Ciudad
+      de Mendoza para que nos mantengamos siempre informados.
     </p>
 
     <section>
@@ -158,7 +158,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas informacion no dude en contactarse
+          Para mas información no dude en contactarse
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
