--- a/templates/psico.html
+++ b/templates/psico.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Cultiva tu mente</title>
+    <title>Aprendizaje</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -46,7 +46,7 @@
       style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_anastasiia-chepinska-obmbhmrc3pw-unsplash.jpg?v=1589731177849);"
     >
       <h1>
-        El cerebro es nuestra mejor arma
+        Aprendizaje desde casa
       </h1>
     </div>
     <section class="indexcards">
@@ -56,11 +56,11 @@
         nuestra salud mental.El intelecto es la mejor herramienta que podemos
         desarollar para el futuro.Por esto deberiamos aprovechar la cuarentena
         para aprender cosas nuevas, participar de cursos y seminarios, aprender
-        idiomas o lo que sea que te incentive a estimular todas las areas del
-        cererbo .Tambien es importante en este tiempo realizar actividades
-        recreativas que nos generen momentos de gratitud y poder explorat al
-        maximo muestras capacidades.Te proponemos que investigues tanto el area
-        de la recreacion como el de aprendizaje a distancia.
+        idiomas o lo que sea que te incentive a estimular todas las áreas del
+        cererbo .También es importante en este tiempo realizar actividades
+        recreativas que nos generen momentos de gratitud y poder explorar al
+        máximo muestras capacidades.Te proponemos que investigues tanto el area
+        de la recreación como el de aprendizaje a distancia.
       </p>
 
       <div class="container mt-5 mb-5">
@@ -73,7 +73,7 @@
                 alt="pinceles"
               />
               <div class="card-body">
-                <h5 class="card-title">Recreacion</h5>
+                <h5 class="card-title">Recreación</h5>
                 <p class="card-text">
                   Explota tu creatividad al 100%
                 </p>
@@ -91,9 +91,9 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Generando Sinapsis</h5>
+                <h5 class="card-title">Educación a distancia </h5>
                 <p class="card-text">
-                  Aprende nuevas cosas segun tu interes
+                  Las claves del éxito
                 </p>
                 <a href="{{ url_for('aprendizaje') }}" class="btn btn-dark"
                   >Ir</a
@@ -113,7 +113,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas informacion no dude en contactarse
+          Para mas información no dude en contactarse
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
