--- a/templates/recreacion.html
+++ b/templates/recreacion.html
@@ -49,7 +49,7 @@
       style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_steve-johnson-idmd4iw9xve-unsplash.jpg?v=1589159161091);"
     >
       <h1>
-        Para entrenterse en casa
+        Entretenete en casa
       </h1>
     </div>
     <section class="indexcards">
@@ -67,7 +67,7 @@
             Las actividades manuales ponen a prueba nustras habilidades
             creativas, animate a pintar, dibujar, recortar al mejor estilo art
             attack.Te dejamos un lugar para que busques algunas ideas
-            ¡Compartinos tus creacione cuando esten listas!
+            ¡Compartinos tus creaciones cuando esten listas!
             <a
               href="https://ar.pinterest.com/cejaurena/manualidades-para-la-cuarentena/"
               class="btn btn-dark"
@@ -83,9 +83,9 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Cine</u></h5>
-            Nada mas lindo que ver peliculas en casa, te recomendamoos una sitio
-            donde podes entoncrar las mejores pleiclas y series recomendades
-            segun tus intereses edad y estado de animo
+            Nada más lindo que ver películas en casa, te recomendamoos un sitio
+            donde podes encontrar las mejores películas y series recomendades
+            segúnn tus intereses
             <a
               href="http://www.sensacine.com/peliculas/mejores/nota-espectadores/"
               class="btn btn-dark"
@@ -100,11 +100,11 @@
             alt="..."
           />
           <div class="media-body">
-            <h5 class="mt-0 mb-1"><u>Musica</u></h5>
-            Aprovevhemos la tecnologia para disfrutar de la mejor musica desde
-            tu tlefno celular, te dejamos el lugar para que encuntres tu
+            <h5 class="mt-0 mb-1"><u>Música</u></h5>
+            Aprovevhemos la tecnología para disfrutar de la mejor música desde
+            tu telefono celular, te dejamos el lugar para que encuentres tu
             playlist ideal en spotify de manera super persoanlizada para que
-            esuces en tu casa.Baila, ordena ,limpia y dejate fluir liberando
+            escuches en tu casa. Bailá, ordená ,limpiá y dejate fluir liberando
             endorfinas que alimenten tu cererbo.
             <a
               href="https://open.spotify.com/playlist/5IO45YtKXacQ3ACtDLihbP"
@@ -122,7 +122,7 @@
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Lecturas</u></h5>
             Para los grandes lectores que disfrutan de novelas, polciales,libros
-            de ciencia ficcion encontra listas de libros segun tu interes.
+            de ciencia ficción, encontrá listas de libros segun tu interes.
             <a
               href="https://www.casadellibro.com/libros-recomendados"
               class="btn btn-dark"
@@ -138,10 +138,10 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Inspirate</u></h5>
-            Busca tu inspiracion donde mas te gusta.El sitio ofical de charlas
+            Busca tu inspiración de lo que más te guste.El sitio ofical de charlas
             TED-Ideas Worth Spreading te ofrece una increible cantidad de
-            charlas intersantes para ver segun tus gustos personales,ingrese al
-            sitio directamente dessde aqui y comenza tu busca persalizada de
+            charlas intersantes para ver según tus gustos personales, ingresá al
+            sitio directamente dessde acá y comenzá tu busca persalizada de
             charlas.
             <a href="https://www.ted.com/" class="btn btn-dark">Ir</a>
           </div>
@@ -155,11 +155,11 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Dejete llevar</u></h5>
-            Si te enctanta interactr con gente y la cuarentna te lo impide Quora
-            es tu lugar.Este sitio ofrece la oportunidad de charlar con gente
-            alrededor de todo el mundo ,animate a preguntar y responder sobre
-            los temas que mas te gustan, no esperes mas y accede a Quora desde
-            aqui.
+            Si te enctanta interactuar con gente y la cuarentena te lo impide, Quora
+            es tu lugar. Este sitio ofrece la oportunidad de charlar con gente
+            alrededor de todo el mundo, animate a preguntar y responder sobre
+            los temas que mas te gustan, no esperes más y accede a Quora desde
+            acá.
             <a href="https://www.quora.com/" class="btn btn-dark">Ir</a>
           </div>
         </li>
@@ -174,7 +174,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas informacion no dude en contactarse
+          Para mas información no dude en contactarse
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
