--- a/templates/salud.html
+++ b/templates/salud.html
@@ -55,28 +55,24 @@
     <section class="indexcards">
       <p class="introsalud">
         <u> Sistema inmune:</u>
-        Se trata de nuestro ejercito de batalla frente a la invasion de agentes
+        Se trata de nuestro ejercito de batalla frente a la invasión de agentes
         infecciosos.Las celulas de la sangre reaccionan de manera super
-        especifica y organizada para dar respuesta a un agente patogeno.EN este
+        específica y organizada para dar respuesta a un agente patógeno.En este
         caso debemos manetener nuestro sistema inume activo para estar
         preparados para la posible entrada del virus y que esta respuesta sea la
-        mas eficiente posible.Numerosos estudios demuestran que una alimentacion
+        mas eficiente posible.Numerosos estudios demuestran que una alimentación
         saludable es la clave para potenicar al meximo nustro sistema de
-        defensas. Ademas de tener que contar con una dieta balanceada existen
-        "super alimentos" naturales que son indispensables para situaciones como
-        la actual.
-      </p>
+        defensas.
       <p class="introsalud">
         <u>Actividad Física:</u>
         El conjunto de reacciones metabolicas asociadas al funcionamiento del
-        orgamismo se vera potenciado cuando un indic¡viduo goze de buena
-        salud.Para ello resulta de vital importancia la actividad fisica.La
-        organizacion mundial de la salud recomienda oxigenar y mover el cuarpo
-        al menos 30 minutos al dia.El ejericio previene enfermedades cardio
-        vasuclaes , reduce la hiper tension y los niveles de colesteroi "malo
-        LDL.Tambien libera grantidad de endorfinas que tieenen efectos de placer
+        orgamismo se vera potenciado cuando un individuo goze de buena
+        salud. Para ello resulta de vital importancia la actividad física.La
+        organización mundial de la salud recomienda oxigenar y mover el cuarpo
+        al menos 30 minutos al dia. l ejericio previene enfermedades cardio
+        vasuclares y reduce la hipertenión entre muchísimos otros beneficios .También libera gran cantidad de endorfinas que tieenen efectos de placer
         y eufroia en el cererbro causando sencaion de bien estar en el individuo
-        facotr de gran importanica en la situacion actual.
+        factor  de gran importanica en la situacion actual.
       </p>
       <div class="container mt-5 mb-5">
         <div class="row justify-content-start">
@@ -88,9 +84,9 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Lista de Compras inteligente</h5>
+                <h5 class="card-title"> Nutrición en tiempos de pandemia </h5>
                 <p class="card-text">
-                  Todo lo que debes tener para reforzar el sistema inmune
+                  Infromación nutrcional y lista de compras inteligente para reforzar el sistema inmune
                 </p>
                 <a href="{{ url_for('listasuper') }}" class="btn btn-dark"
                   >Ir</a
@@ -127,7 +123,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas informacion no dude en contactarse
+          Para mas información no dude en contactarse
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
