--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
       >
         <div>
           <p class="titulop">
-            La pademia del siglo 21
+            La pandemia del siglo 21
           </p>
         </div>
       </div>
@@ -87,7 +87,7 @@
               <div class="card-body">
                 <h5 class="card-title">Salud en casa</h5>
                 <p class="card-text">
-                  Lista de compras inteligentes,ejercicio y recomendaciones para
+                  Lista de compras inteligentes, ejercicio y recomendaciones para
                   cuidar tu salud
                 </p>
                 <a href="{{ url_for('salud') }}" class="btn btn-dark">Entrar</a>
@@ -102,9 +102,9 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Manual Practico</h5>
+                <h5 class="card-title">Información Útil</h5>
                 <p class="card-text">
-                  Informate de sintomas y protocolos de seguridad e higiene
+                  Informate de síntomas y protocolos de seguridad e higiene
                 </p>
                 <a href="{{ url_for('manualp') }}" class="btn btn-dark"
                   >Entrar</a
@@ -121,9 +121,9 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title">Cuidemos la mente</h5>
+                <h5 class="card-title">Aprendizaje a distancia </h5>
                 <p class="card-text">
-                  Tips y expereincias para sobrellevar la cuarentena
+                  Encontrá ideas para recrearte y consejos útlies para la educación a distancia 
                 </p>
                 <a href="{{ url_for('psico') }}" class="btn btn-dark">Entrar</a>
               </div>
@@ -140,7 +140,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas informacion no dude en contactarse
+          Para mas información no dude en contactarse
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
