--- a/templates/listasuper.html
+++ b/templates/listasuper.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Alimentacion de Pandemia</title>
+    <title>Alimentación de Pandemia</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -49,11 +49,11 @@
       style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_ja-ma--goux23dnks-unsplash.jpg?v=1588798048599);"
     >
       <h1>
-        Defendete del Covid-19
+        Defendete del Corona Virus
       </h1>
     </div>
     <section class="indexcards">
-      <h2><u>Informacion sobre los Macro-Nutrientes </u></h2>
+      <h2><u>Información sobre los Macro-Nutrientes </u></h2>
 
       <ul class="list-unstyled">
         <li class="media my-4">
@@ -64,12 +64,12 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Vitaminas y Minerales</u></h5>
-            Son los suplementos necesarios para todas las reacciones enizmaticas
-            y metabolicas del organizmo.Sin ellas presentariamos diversas fallas
+            Son los suplementos necesarios para todas las reacciones enizmáticas
+            y metabólicas del organismo.Sin ellas presentaríamos diversas fallas
             funiconales.Se destacan el rol de la vitamina C y la D con la
-            rspuesta inmunitaria frente a las infecciones.Si bien existen
-            suplementos multivitaminicos, las fuentes naturales seran siempre
-            una mejor opcion
+            respuesta inmunitaria frente a las infecciones.Si bien existen
+            suplementos multivitamínicos, las fuentes naturales serán siempre
+            una mejor opción
           </div>
         </li>
         <li class="media my-4">
@@ -85,11 +85,10 @@
             funciones biológicas principales entre otras son la de actuar como
             biocatalizador del metabolismo y la de actuar como anticuerpo por
             esto es de suma importanica obtener proteinas de alto valor
-            biologico en nustra rutina. Se recomienda la ingesta de productos
+            biológico(es decir completas)en nustra rutina. Se recomienda la ingesta de productos
             naturales ya sean animales o vegetales aunque se requiere de un
-            correcto asesoramiento en este ultimo para que los requerimientos
-            diarios queden cubiertos.Si se optan por proteinas animales es
-            recomendable que sean lo mas magras posibles y variadas.
+            correcto asesoramiento nutricional en este último para que los requerimientos
+            diarios queden cubiertos.
           </div>
         </li>
         <li class="media my-4">
@@ -100,15 +99,14 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Carbohidratos</u></h5>
-            Son la fuente más importante de energía para su cuerpo. Su sistema
+            Son la fuente más importante de energía para el cuerpo. El sistema
             digestivo convierte estos hidratos de carbono en glucosa (azúcar en
-            la sangre). Su cuerpo usa esta azúcar como energía para sus células,
-            tejidos y órganos y guarda cualquier azúcar extra en su hígado y
-            músculos para cuando los necesite. Sin ellos no dispondriamos de la
-            energia necesaria para nuestro metabolismo basal.Es importante
+            la sangre). El cuerpo usa esta azúcar como energía para sus células,
+            tejidos y órganos. Sin ellos no dispondriamos de la
+            energía necesaria para nuestro metabolismo basal.Es importante
             destacar que se recomienda el consumo de granos integrales y
-            azucares lo menos refinados posibles , dado el impacto negativo que
-            tienen los aditivos y procesamientos quimicos sobre nuestro sistema
+            azucares lo menos refinadas posibles, dado el impacto negativo que
+            tienen los aditivos y conservantes quimícos sobre nuestro sistema
             inmune.
           </div>
         </li>
@@ -119,15 +117,14 @@
             alt="..."
           />
           <div class="media-body">
-            <h5 class="mt-0 mb-1"><u>Lipidos</u></h5>
+            <h5 class="mt-0 mb-1"><u>Lípidos</u></h5>
             Son un grupo muy amplio presente tanto en organsimos animales como
             vegetales.Los lípidos cumplen funciones diversas en los organismos
-            vivientes, entre ellas la de reserva energética (como los
-            triglicéridos), estructural (como los fosfolípidos de las bicapas) y
+            vivientes como reserva energética, estructurales (formando membranas) y
             reguladora (como las hormonas esteroides). Además, se les atribuye
             la capacidad de ser aislantes naturales, ya que son malos
             conductores del calor.Es de suma importanica destacar el rol de las
-            famosas "Grasas Saludables" , se ecuenctran en este grupo y son de
+            famosas "Grasas Saludables", son los lípidos de AlTA calidad nutricional las cuales son de
             vital importanica ya que seran componentes de hormonas esecniales
             para la vida .
           </div>
@@ -150,40 +147,43 @@
           <dt><u>Frutas y Verduras</u></dt>
           <dd>
             Seran las fuentes NATURALES de vitaminas y minerales.Algunas ideas
-            son: citricos(narnja mandarina pomelo-full vitamina C), manzana,
-            banana, kiwi, pera, arandoanos, frutos rojos, higos etc.Verduras:
-            hojas verdes, tomate, pimientos, remolacha, pepino, bernejena,
-            calabaza, rabanitos repollo. RECORDAR:mientras mas colores y
-            variedad consumamos de este grupo mejor
+            son: cítricos(narnja, mandarina y  pomelo -full vitamina C), manzana,
+            banana, kiwi, pera, arandanos, frutos rojos, higos etc.
+            Verduras:
+            hojas verdes(toda la variedad que quieras), tomate, pimientos, remolacha, pepíno, bernejena,
+            calabaza, rabanitos repollo. 
+            RECORDAR: mientras más colores y
+            variedad consumamos de este grupo mejor.
           </dd>
-          <dt><u>Carnes y Lacteos</u></dt>
+          <dt><u>Carnes y Lácteos</u></dt>
           <dd>
-            Probablemnte seran nustra prinicpal fuente de proteinas ; Carnes:
-            vaca, pollo, pescado (atun, merluza, el que haya fresco ) y
-            cerdo(elejí distintos cortes magros), fiambres( no abusemos de su
+            Probablemnte serán una fuente principal de proteinas ; Carnes:
+            vaca, pollo, pescado (si encontrás fresco mejor ) y
+            cerdo(elejí distintos cortes magros), fiámbres( no abusemos de su
             consumo ya que los embutidos tienen muchos
-            conservantes).Lacteos:quesos, leche y yogurt(probiótico fundamental
+            conservantes).
+            Lácteos:quesos, leche y yogurt(probiótico fundamental
             para nuestro sistema inmune).No olvidarse de los huevos que contien
-            proteinas de alto valor biologico ademas de otros nustrientes
-            importantes. RECORDAR: aseguremosnos de tener los requermientos
-            protéicos abastecidos.
+            proteinas de alto valor biológico además de otros nutrientes
+            importantes. RECORDAR: asegurate de abastecer las necesidades proteicas.
           </dd>
           <dt><u>Cereales y legumbres</u></dt>
           <dd>
             Harinas integrales de todo tipo, avena y cereales
             integrales.Legumbres (porotos, garbanzos, lentejas
-            etc).Pastas(ravioles, ñoquis, fiedeos).Pan , si no lo hacemos casero
-            busquemos uno con pocos aditivos y quimicos agregados preferentmente
-            de harinas poco refinadas RECORDAR: elijamos hidratos de carbono de
-            ALTA calidad nustricional
+            etc).Pastas(ravioles, ñoquis, fiedeos).Pan, si no lo hacemos casero
+            busquemos uno con pocos aditivos y químicos agregados preferentmente
+            de harinas poco refinadas.
+            RECORDAR: elijamos hidrátos de carbono de
+            ALTA calidad nutricional
           </dd>
           <dt><u>Grasas Saludables</u></dt>
           <dd>
-            Aceite de oliva , semillas (chia, lino, girasol, sésamo etc), frutos
-            secos(mani, avellanas, nueces, castañas, pistacho etc), palta (alta
-            calidad nutricional)
+            Aceite de oliva , semillas (chía, lino, girasol, sésamo etc), frutos
+            secos(maní, avellanas, nueces, castañas, pistacho etc)
+            RECORDAR: moderar su consumo ya que son de alta densidad calórica.
           </dd>
-          RECORDAR: fundamentales para el correcto funcionamiento del cuerpo
+          
         </dl>
       </div>
     </section>
