--- a/templates/manualp.html
+++ b/templates/manualp.html
@@ -80,7 +80,7 @@
           height="500"
         />
         <img
-          sec="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fcompras.jpg?v=1589747387162"
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F97389003_10157266503798161_2023864915739017216_o.jpg?v=1589802547431"
           class="traino img-thumbnail rounded"
           width="500"
           height="500"
