--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@ margin: 0em;
   background-color: gray;
   margin-left: 5px;
   margin-top: 5px;
+  margin-bottom: 2px;
 }
 .fondo{
   background-color: grey;
@@ -81,6 +82,8 @@ margin: 0em;
   font-size: 20px;
   font-style: itallic;
   font-weight: bolder;
+  margin-top: 5px;
+  margin-left: 2px;
 
 }
   .introsalud{
@@ -89,7 +92,7 @@ margin: 0em;
     font-style: italic;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     margin-top: 5px;
-    margin-left: 20px;
+    margin-left: 10px;
 
   }
   .tapanutri{
