--- a/templates/aprendizaje.html
+++ b/templates/aprendizaje.html
@@ -58,42 +58,42 @@
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_edu.jpg?v=1589226915200 "
           class="izquierda"
         />
-        Sin importar el nivel educativo estes transitando es importante que
-        fomentemos el aparendizaje en todo moemnto en nuestras casas.La
+        Sin importar el nivel educativo estés transitando es importante que
+        fomentemos el aparendizaje en todo momento en nuestras casas.La
         educación a distancia es todo un desafío para una persona en cualquier
         edad.Aqui te brindamos algunos consejos para que la tarea de educarse en
         casa sea mas fácil.
       </p>
     </section>
     <div class="indexcards">
-      <u><h2 class="margentitulos">Consejos utiles</h2></u>
+      <u><h2 class="margentitulos">Consejos útiles</h2></u>
 
       <dl class="margentitulos">
         <dt><u>Conocimiento de la herramienta:</u></dt>
         <dd>
           Es sumamente necesario tener una buen conocimiento de la plataforma
-          virtual que cada institución use.Familiarizáte con la herramienta de
+          virtual que cada institución use.Familiarizate con la herramienta de
           comunicacíon entre alumnos y porofesores y si tenes dudas o preguntas
-          no tardes en pedir ayuda
+          no tardes en pedir ayuda.
         </dd>
         <dt><u>Organización</u></dt>
         <dd>
           Si bien las clases no son presenciales resulta útli tener una rutina,
           ajustala a tus horarios pero la organización es clave para no
-          atrasarse en las tareas.De este modo podras disfrutar de otras cosas
-          que ademas te gusten.
+          atrasarse en las tareas.De este modo podrás disfrutar de otras cosas
+          que además te gusten.
         </dd>
         <dt><u>Toma recreos</u></dt>
         <dd>
-          Intercalá intervalos de estudio de no mas de 2 horas con recréos para
-          descansar.Esta probado que son necesarios para asentar los
+          Intercalá intervalos de estudio de no mas de 2 horas con recreos para
+          descansar.Está probado que son necesarios para asentar los
           conocimientos.
         </dd>
         <dt><u>Tecnología</u></dt>
         <dd>
           Nos guste o no la tecnología es nuestro mejor aliado en esta
-          circustancia,aprendamos a usarla,  familiarizáte con los programas de
-          edicíonc de texto y otras presentaciones.Si te cuesta leer en
+          circustancia, aprendamos a usarla, familiarizate con los programas de
+          edición de texto y otras presentaciones.Si te cuesta leer en
           computadora opta por imprimir los textos muy extensos para poder
           realizar las tareas que te pidan. Frente a una situacíon de exámen o
           clases virtuales asegurate de tener buena conectividad a una red Wifi
@@ -101,11 +101,11 @@
         </dd>
         <dt><u>Renovación</u></dt>
         <dd>
-          Aprovecha para aprender cosas nuevas aparte de lo estrictamente
-          académico.Los idiomas son muy interesantes y hya gran variedad de
+          Aprovechá para aprender cosas nuevas además de lo estrictamente
+          académico.Los idiomas son muy interesantes y hay gran variedad de
           modalidades a distancia, o podes optar por alguna especialización
           que te interese.Todo es bienvenido a la hora de hacer crecer nuestros
-          conocimientos, esta probado que mientras mas fomentemos la conexión entre neuronas mejor. 
+          conocimientos, está probado que mientras más fomentemos la conexión entre neuronas mejor. 
         </dd>
       </dl>
     </div>
@@ -118,7 +118,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas información no dude en contactarse
+          Para mas información no dudes en contactarte
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
