--- a/templates/listasuper.html
+++ b/templates/listasuper.html
@@ -66,7 +66,7 @@
             <h5 class="mt-0 mb-1"><u>Vitaminas y Minerales</u></h5>
             Son los suplementos necesarios para todas las reacciones enizmáticas
             y metabólicas del organismo.Sin ellas presentaríamos diversas fallas
-            funiconales.Se destacan el rol de la vitamina C y la D con la
+            funiconales.Se destaca el rol de la vitamina C y la D con la
             respuesta inmunitaria frente a las infecciones.Si bien existen
             suplementos multivitamínicos, las fuentes naturales serán siempre
             una mejor opción
@@ -84,10 +84,9 @@
             celulares y es el constituyente esencial de las células vivas; sus
             funciones biológicas principales entre otras son la de actuar como
             biocatalizador del metabolismo y la de actuar como anticuerpo por
-            esto es de suma importanica obtener proteinas de alto valor
-            biológico(es decir completas)en nustra rutina. Se recomienda la ingesta de productos
+            esto es de suma importanica obtener proteinas de alta calidad nutricional en nustra rutina. Se recomienda la ingesta de productos
             naturales ya sean animales o vegetales aunque se requiere de un
-            correcto asesoramiento nutricional en este último para que los requerimientos
+            correcto asesoramiento nutricional en éste último para que los requerimientos
             diarios queden cubiertos.
           </div>
         </li>
@@ -102,9 +101,9 @@
             Son la fuente más importante de energía para el cuerpo. El sistema
             digestivo convierte estos hidratos de carbono en glucosa (azúcar en
             la sangre). El cuerpo usa esta azúcar como energía para sus células,
-            tejidos y órganos. Sin ellos no dispondriamos de la
+            tejidos y órganos. Sin ellos no dispondríamos de la
             energía necesaria para nuestro metabolismo basal.Es importante
-            destacar que se recomienda el consumo de granos integrales y
+            destacar que se recomienda el consumo de granos y harinas integrales y
             azucares lo menos refinadas posibles, dado el impacto negativo que
             tienen los aditivos y conservantes quimícos sobre nuestro sistema
             inmune.
@@ -125,8 +124,8 @@
             la capacidad de ser aislantes naturales, ya que son malos
             conductores del calor.Es de suma importanica destacar el rol de las
             famosas "Grasas Saludables", son los lípidos de AlTA calidad nutricional las cuales son de
-            vital importanica ya que seran componentes de hormonas esecniales
-            para la vida .
+            vital importanica ya que seran componentes de hormonas esenciales
+            para la vida.
           </div>
         </li>
       </ul>
@@ -146,12 +145,12 @@
         <dl>
           <dt><u>Frutas y Verduras</u></dt>
           <dd>
-            Seran las fuentes NATURALES de vitaminas y minerales.Algunas ideas
+            Serán las fuentes NATURALES de vitaminas y minerales.Algunas ideas
             son: cítricos(narnja, mandarina y  pomelo -full vitamina C), manzana,
             banana, kiwi, pera, arandanos, frutos rojos, higos etc.
             Verduras:
             hojas verdes(toda la variedad que quieras), tomate, pimientos, remolacha, pepíno, bernejena,
-            calabaza, rabanitos repollo. 
+            calabaza, rabanitos,repollo etc. 
             RECORDAR: mientras más colores y
             variedad consumamos de este grupo mejor.
           </dd>
@@ -159,7 +158,7 @@
           <dd>
             Probablemnte serán una fuente principal de proteinas ; Carnes:
             vaca, pollo, pescado (si encontrás fresco mejor ) y
-            cerdo(elejí distintos cortes magros), fiámbres( no abusemos de su
+            cerdo(elejí cortes magros), fiámbres( no abusemos de su
             consumo ya que los embutidos tienen muchos
             conservantes).
             Lácteos:quesos, leche y yogurt(probiótico fundamental
@@ -171,10 +170,10 @@
           <dd>
             Harinas integrales de todo tipo, avena y cereales
             integrales.Legumbres (porotos, garbanzos, lentejas
-            etc).Pastas(ravioles, ñoquis, fiedeos).Pan, si no lo hacemos casero
+            etc).Pastas(ravioles, ñoquis, fiedeos, si son integrales mejor ).Pan (si no lo hacemos casero
             busquemos uno con pocos aditivos y químicos agregados preferentmente
             de harinas poco refinadas.
-            RECORDAR: elijamos hidrátos de carbono de
+            RECORDAR: elijamos hidratos de carbono de
             ALTA calidad nutricional
           </dd>
           <dt><u>Grasas Saludables</u></dt>
