--- a/templates/manualp.html
+++ b/templates/manualp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Información practica</title>
+    <title>Información práctica</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -53,7 +53,7 @@
     </div>
     <p class="introsalud">
       <u> Para tomar nota</u>
-      Aqui podes encontrar de forma sencilla la información importante que deberías
+      Aquí podes encontrar de forma sencilla la información importante que deberías
       saber acerca de protoloclos, medidas de seguridad e higiene, restricciones
       y permisos entre otros anuncios liberados desde el gobierno de la Ciudad
       de Mendoza para que nos mantengamos siempre informados.
@@ -158,7 +158,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas información no dude en contactarse
+          Para mas información no dudes en contactarte
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
