--- a/templates/psico.html
+++ b/templates/psico.html
@@ -46,7 +46,7 @@
       style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_anastasiia-chepinska-obmbhmrc3pw-unsplash.jpg?v=1589731177849);"
     >
       <h1>
-        Aprendizaje desde casa
+        Aprender en casa
       </h1>
     </div>
     <section class="indexcards">
@@ -54,13 +54,13 @@
         <u>Salud Mental</u>
         Frente a las condiciones de encierro debemos prioirzar el cudiado de
         nuestra salud mental.El intelecto es la mejor herramienta que podemos
-        desarollar para el futuro.Por esto deberiamos aprovechar la cuarentena
+        desarollar para el futuro.Por esto deberíamos aprovechar la cuarentena
         para aprender cosas nuevas, participar de cursos y seminarios, aprender
         idiomas o lo que sea que te incentive a estimular todas las áreas del
         cererbo .También es importante en este tiempo realizar actividades
         recreativas que nos generen momentos de gratitud y poder explorar al
-        máximo muestras capacidades.Te proponemos que investigues tanto el area
-        de la recreación como el de aprendizaje a distancia.
+        máximo nuestras capacidades.Te proponemos que investigues tanto el área
+        de la recreación como la de aprendizaje a distancia.
       </p>
 
       <div class="container mt-5 mb-5">
@@ -75,7 +75,7 @@
               <div class="card-body">
                 <h5 class="card-title">Recreación</h5>
                 <p class="card-text">
-                  Explota tu creatividad al 100%
+                  Explotá tu creatividad al 100%
                 </p>
                 <a href="{{ url_for('recreacion') }}" class="btn btn-dark"
                   >Ir</a
@@ -113,7 +113,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas información no dude en contactarse
+          Para mas información no dudes en contactarte
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
