--- a/templates/recreacion.html
+++ b/templates/recreacion.html
@@ -83,9 +83,9 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Cine</u></h5>
-            Nada más lindo que ver películas en casa, te recomendamoos un sitio
-            donde podes encontrar las mejores películas y series recomendades
-            segúnn tus intereses
+            Nada más lindo que ver películas en casa, te recomendamos un sitio
+            donde podes encontrar las mejores películas y series recomendadas
+            según tus intereses
             <a
               href="http://www.sensacine.com/peliculas/mejores/nota-espectadores/"
               class="btn btn-dark"
@@ -101,11 +101,11 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Música</u></h5>
-            Aprovevhemos la tecnología para disfrutar de la mejor música desde
-            tu telefono celular, te dejamos el lugar para que encuentres tu
+            Aprovechemos la tecnología para disfrutar de la mejor música desde
+            tu teléfono celular, te dejamos el lugar para que encuentres tú
             playlist ideal en spotify de manera super persoanlizada para que
-            escuches en tu casa. Bailá, ordená ,limpiá y dejate fluir liberando
-            endorfinas que alimenten tu cererbo.
+            escuches en tú casa. Bailá, ordená ,limpiá y dejate fluir liberando
+            endorfinas que alimenten tu cuerpo.
             <a
               href="https://open.spotify.com/playlist/5IO45YtKXacQ3ACtDLihbP"
               class="btn btn-dark"
@@ -122,7 +122,7 @@
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Lecturas</u></h5>
             Para los grandes lectores que disfrutan de novelas, polciales,libros
-            de ciencia ficción, encontrá listas de libros segun tu interes.
+            de ciencia ficción, encontrá listas de libros según tu intereses.
             <a
               href="https://www.casadellibro.com/libros-recomendados"
               class="btn btn-dark"
@@ -154,11 +154,11 @@
             alt="logo quora"
           />
           <div class="media-body">
-            <h5 class="mt-0 mb-1"><u>Dejete llevar</u></h5>
-            Si te enctanta interactuar con gente y la cuarentena te lo impide, Quora
-            es tu lugar. Este sitio ofrece la oportunidad de charlar con gente
+            <h5 class="mt-0 mb-1"><u>Dejate llevar</u></h5>
+            Si te encanta interactuar con gente y la cuarentena te lo impide, Quora
+            es tu lugar. éste sitio ofrece la oportunidad de charlar con gente
             alrededor de todo el mundo, animate a preguntar y responder sobre
-            los temas que mas te gustan, no esperes más y accede a Quora desde
+            los temas que más te gustan, no esperes más y accede a Quora desde
             acá.
             <a href="https://www.quora.com/" class="btn btn-dark">Ir</a>
           </div>
@@ -174,7 +174,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas información no dude en contactarse
+          Para mas información no dudes en contactarte
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
