--- a/templates/entrenamiento.html
+++ b/templates/entrenamiento.html
@@ -60,9 +60,9 @@
           width="450"
           height="450"
         />
-        El ejercico es fundamental para la salud del organismo. Podes optar por
-        distintas actividades, te proponemos algunas ideas y sitios que podes
-        visitra para inspirarte y sacar tu mejor versión
+        El ejercicio es fundamental para la salud del organismo. Podes optar por
+        distintas actividades, te proponemos algunas ideas y sitios que podés
+        visitar para inspirarte y sacar tu mejor versión
       </p>
     </section>
     <div class="indexcards">
@@ -92,7 +92,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas información no dude en contactarse
+          Para mas información no dudes en contactarse
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
