--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
       >
         <div>
           <p class="titulop">
-            La pandemia del siglo 21
+            La Pandemia del siglo 21
           </p>
         </div>
       </div>
@@ -140,7 +140,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas información no dude en contactarse
+          Para mas información no dudes en contactarte
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
