--- a/templates/informacionc.html
+++ b/templates/informacionc.html
@@ -54,7 +54,7 @@
       <div class="indexcards">
         <p class="introsalud">
           <h2><u> Pandemia de información:</u></h2>
-          Nos encontramos frente a un mar inmenso de información acerca del Corona Virus, de los avances y descubrimientos de la ciencia sobre este tema.Para los curiosos que desean investigar todo acerca de este virus le recomendamos primero que se familiarice con algunos términos que encontrará en todo texto relacionado a a este virus tan particular.
+          Nos encontramos frente a un mar inmenso de información acerca del Corona Virus, de los avances y descubrimientos de la ciencia sobre este tema.Para los curiosos que deseen investigar todo acerca de este virus te recomendamos primero que te pongasen contacto con algunos términos que encontrará en todo texto relacionado a a este virus tan particular.
         </p>
 
 
@@ -74,7 +74,7 @@
         <dd>
           Sustancia compuesta por una suspensión de microorganismos atenuados o muertos que se introduce en el organismo para prevenir y tratar determinadas enfermedades infecciosas; estimula la formación de anticuerpos con lo que se consigue una inmunización contra estas enfermedades.
         </dd>
-        <dt><u>Ensayo Clinico</u></dt>
+        <dt><u>Ensayo Clínico</u></dt>
         <dd>Son investigaciones de nuevos medicamentos o vacunas en las que los voluntarios -enfermos o personas sanas- pueden participar. En ellos, se prueban nuevos tratamientos o se comparan diferentes tipos de aplicación de tratamientos ya existentes. </dd>
         <dt><u>Corona-Virus</u></dt>
         <dd>
@@ -116,7 +116,7 @@
         Frente a la situación de contingencia como usarios de redes sociales y
         medios de comunicacion disponemos de gran cantidad de informacion.Si te gustaría
         infromarte acerca de avances sobre la batalla de la ciencia contra el
-        Corona-Virus, aqui te dejamos algunos sitios para que puedas visitar.Siempore recorda que si queres ser un buen científico debes saber recolectar información de calidad.
+        Corona-Virus, aquí te dejamos algunos sitios para que puedas visitar.Siempre recordá que si querés ser un buen científico debes saber recolectar información de calidad.
 
       </p>
       <ul class="list-unstyled">
@@ -201,7 +201,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas información no dude en contactarse
+          Para mas información no dudes en contactarte
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
