--- a/templates/salud.html
+++ b/templates/salud.html
@@ -55,24 +55,23 @@
     <section class="indexcards">
       <p class="introsalud">
         <u> Sistema inmune:</u>
-        Se trata de nuestro ejercito de batalla frente a la invasión de agentes
-        infecciosos.Las celulas de la sangre reaccionan de manera super
+        Se trata de nuestro ejército de batalla frente a la invasión de agentes
+        infecciosos.Las células de la sangre reaccionan de manera súper
         específica y organizada para dar respuesta a un agente patógeno.En este
-        caso debemos manetener nuestro sistema inume activo para estar
+        caso debemos manetener nuestro sistema inmune activo para estar
         preparados para la posible entrada del virus y que esta respuesta sea la
-        mas eficiente posible.Numerosos estudios demuestran que una alimentación
-        saludable es la clave para potenicar al meximo nustro sistema de
+        más eficiente posible. Numerosos estudios demuestran que una alimentación
+        saludable es la clave para potenicar al máximoo nuestro sistema de
         defensas.
       <p class="introsalud">
         <u>Actividad Física:</u>
-        El conjunto de reacciones metabolicas asociadas al funcionamiento del
+        El conjunto de reacciones metabólicas asociadas al funcionamiento del
         orgamismo se vera potenciado cuando un individuo goze de buena
         salud. Para ello resulta de vital importancia la actividad física.La
-        organización mundial de la salud recomienda oxigenar y mover el cuarpo
-        al menos 30 minutos al dia. l ejericio previene enfermedades cardio
-        vasuclares y reduce la hipertenión entre muchísimos otros beneficios .También libera gran cantidad de endorfinas que tieenen efectos de placer
-        y eufroia en el cererbro causando sencaion de bien estar en el individuo
-        factor  de gran importanica en la situacion actual.
+        Organización Mundial de la Salud recomienda oxigenar y mover el cuerpo
+        al menos 30 minutos al dia. El ejercicio previene enfermedades cardio-vasuclares y reduce la hipertenión entre muchísimos otros beneficios .También libera gran cantidad de endorfinas que tieenen efectos de placer
+        y euforia en el cererbro causando sensación de bien estar en el individuo
+        factor de gran importanica en la situación actual.
       </p>
       <div class="container mt-5 mb-5">
         <div class="row justify-content-start">
@@ -123,7 +122,7 @@
           ;
           background="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_viktor-forgacs-fcdqdjum6b4-unsplash.jpg?v=1588799035102"
         >
-          Para mas información no dude en contactarse
+          Para mas información no dudes en contactarte
         </p>
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
