--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,15 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <!-- import the webpage's stylesheet -->
+    <!-- Anclaje al archivo de estilos-->
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
     />
   </head>
   <body class="fondo">
+    <!-- Barra de navegacion y portada-->
+
     <header class="portadai">
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
@@ -65,6 +67,7 @@
                 class="card-img card-img-top"
                 alt="..."
               />
+              <!-- cuerpo de la seccion-->
               <div class="card-body">
                 <h5 class="card-title">Para los amantes de la Ciencia</h5>
                 <p class="card-text">
