--- a/templates/informacionc.html
+++ b/templates/informacionc.html
@@ -11,13 +11,14 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <!-- import the webpage's stylesheet -->
+    <!-- Anclaje al archivo de estilos-->
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
     />
   </head>
   <body class="fondo">
+    <!-- Barra de navegacion y portada-->
     <header class="fondos">
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
@@ -51,6 +52,7 @@
       </h1>
     </div>
     <section>
+      <!-- cuerpo de la seccion-->
       <div class="indexcards">
         <p class="introsalud">
           <h2><u> Pandemia de información:</u></h2>
@@ -92,6 +94,7 @@
     </div>
       </div>
   </section>
+  <!-- Imagenes cienia una al lado de la otra-->
   <div style="float:left;width:50%;">
     <div style="padding-right:10px;">
       <div class="text-center">
@@ -109,6 +112,7 @@
     
     <div style="clear: both;"></div>
   <section>
+    <!-- Fuentes recomendadas-->
     <div>
     <div class="indexcards">
       <p class="introsalud">
