--- a/templates/psico.html
+++ b/templates/psico.html
@@ -11,7 +11,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <!-- import the webpage's stylesheet -->
+    <!-- Anclaje al archivo de estilos-->
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
@@ -19,6 +19,7 @@
   </head>
   <body class="fondo">
     <header>
+      <!-- Barra de navegacion y portada-->
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
       >
@@ -49,6 +50,7 @@
         Aprender en casa
       </h1>
     </div>
+    <!-- cuerpo de la seccion-->
     <section class="indexcards">
       <p class="introsalud">
         <u>Salud Mental</u>
