--- a/templates/salud.html
+++ b/templates/salud.html
@@ -11,13 +11,15 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <!-- import the webpage's stylesheet -->
+    <!-- Anclaje al archivo de estilos-->
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
     />
   </head>
   <body class="fondo">
+    <!-- Barra de navegacion y portada-->
+
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
@@ -52,6 +54,7 @@
         Salud en casa
       </h1>
     </div>
+    <!-- cuerpo de la seccion-->
     <section class="indexcards">
       <p class="introsalud">
         <u> Sistema inmune:</u>
